kubernetes/overlays/foo/httproutes.yaml
# HTTPRoutes for foo cluster
# checkout is exposed via Lattice so bar cluster services can call back if needed
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: checkout
  namespace: checkout
spec:
  parentRefs:
    - name: summit-demo-service-network
      namespace: aws-application-networking-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: checkout
          namespace: checkout
          port: 8080
