kubernetes/overlays/foo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkout-alb
  namespace: checkout
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health/liveness
    alb.ingress.kubernetes.io/tags: Environment=demo,Project=eks_sidecarless_service_networking
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /v1/checkout
            pathType: Prefix
            backend:
              service:
                name: checkout
                port:
                  number: 8080
